# x86-crypto

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.cargo/: config.toml
.github/workflows/: rust.yml
benches/: speed.rs
fuzz_targets/: fuzz_target_1.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: aes_cipher.rs  allocator.rs  cache_operations.rs  hw_chacha.rs  lib.rs  ni_instructions.rs  other_instructions.rs  rng.rs  simd.rs  tls_handler.rs
src/ciphers/: aes_cipher.rs  general.rs  vaes_cipher.rs
src/hash/: hmac.rs  sha.rs
src/memory/: allocator.rs  constant_time.rs  memory_obfuscation.rs  securevec.rs  securevec_traits.rs  sys_control.rs  zeroize.rs
src/ni_instructions/: aesni.rs  pcmul.rs  shani.rs  vaes.rs
tests/: test.rs
