[package]
name = "x86-crypto"
description = "High-performance, hardware-accelerated cryptography for x86_64 (AES-NI/VAES, PCLMULQDQ, GHASH, ChaCha20); no_std-friendly."
readme = "README.md"
repository = "https://github.com/Metehan120/x86-crypto"
homepage = "https://github.com/Metehan120/x86-crypto"
license = "MIT"
version = "0.1.0"
edition = "2024"
keywords = ["aes", "gcm", "ctr", "cryptography", "x86_64"]
categories = ["cryptography", "hardware-support", "no-std"]

[badges]
github-actions = { repository = "Metehan120/x86-crypto", workflow = "Rust Tests" }

[features]
default = ["std", "secure_memory", "all_aes", "audit-logs", "vaes"]
std = []
compression_test = ["lz4_flex"]
secure_memory = ["libc"]
aes_cipher = ["rayon", "std"]
aes_gcm = ["aes_cipher", "ghash", "universal-hash"]
all_aes = ["aes_gcm"]
tls = ["rustls", "std"]
experimental_tls_decryption = ["tls"]
cipher_prefetch = ["std", "aes_cipher"]
dev-logs = []
audit-logs = []
trace-logs = []
debug-alloc = []
cipher-prefetch-warn = []
vaes_asm_cipher = []
vaes = ["aes_cipher"]
all = ["compression_test", "secure_memory", "all_aes", "tls"]

[dependencies]
thiserror-no-std = "2.0.2"
num-traits = "0.2.19"
rand_chacha = "0.9.0"
rand_core = "=0.9.0"
log = { version = "0.4.27", default-features = false }

rustls = { version = "0.23.31", optional = true }

ghash = { version = "0.5.1", optional = true }
universal-hash = { version = "0.5.1", optional = true }
rayon = { version = "1.11.0", optional = true }
lz4_flex = { version = "0.11.5", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "0.2.175", optional = true }

[dev-dependencies]
env_logger = "0.11.8"
aes = "0.8"
ctr = "0.9"
aes-gcm = "0.10"
rand = "=0.8.5"
hex = "0.4"

[lib]
doctest = false

[package.metadata.docs.rs]
features = ["all_aes", "secure_memory", "tls"]
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]
