[package]
name = "x86-crypto"
description = "High-performance, hardware-accelerated cryptography for x86_64 (AES-NI/VAES, PCLMULQDQ, GHASH, ChaCha20); no_std-friendly."
readme = "README.md"
repository = "https://github.com/Metehan120/x86-crypto"
homepage = "https://github.com/Metehan120/x86-crypto"
license = "MIT"
version = "0.2.0-alpha-2"
edition = "2024"
keywords = ["aes", "gcm", "ctr", "cryptography", "x86_64"]
categories = ["cryptography", "hardware-support", "no-std"]

[badges]
github-actions = { repository = "Metehan120/x86-crypto", workflow = "Rust Tests" }

[features]
default = ["std", "tpm-mem", "all_aes", "audit-logs", "vaes"]
std = []
compression_test = ["lz4_flex"]
secure_memory = ["libc"]
tpm-mem = ["tss-esapi", "secure_memory"]
aes_cipher = ["rayon", "std"]
aes_gcm = ["aes_cipher", "ghash", "universal-hash"]
all_aes = ["aes_gcm"]
dev-logs = []
audit-logs = []
trace-logs = []
debug-alloc = []
vaes_asm_cipher = []
vaes = ["aes_cipher"]
all = ["compression_test", "secure_memory", "all_aes", "vaes"]

[dependencies]
thiserror-no-std = "2.0.2"
num-traits = "0.2.19"
rand_chacha = "0.9.0"
rand_core = "=0.9.0"
log = { version = "0.4.28", default-features = false }
macros = { path = "./macros" }
bytemuck = "1.24.0"

ghash = { version = "0.5.1", optional = true, features = ["std", "zeroize"] }
universal-hash = { version = "0.5.1", optional = true }
rayon = { version = "1.11.0", optional = true }
lz4_flex = { version = "0.11.5", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "0.2.177", optional = true }
tss-esapi = { version = "7.6.0", optional = true }
hmac = "0.12.1"
sha2 = "0.10.9"

[dev-dependencies]
env_logger = "0.11.8"
aes = "0.8"
ctr = "0.9"
aes-gcm = "0.10"
rand = "=0.8.5"
hex = "0.4"
criterion = "0.7.0"

[[bench]]
name = "speed"
harness = false

[lib]
doctest = false

[package.metadata.docs.rs]
features = ["all_aes", "secure_memory", "tls"]
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
